swagger-settings-controllers-add-ons